[project]
name = "env-test"
version = "0.1.0"
description = "Task that tests retrieval of environment variables in Inspect"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["inspect-ai>=0.3.131"]

[dependency-groups]
models = ["anthropic", "openai"]

[project.entry-points.inspect_ai]
env_test = "env_test._registry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env_test"]
